--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projects",
   "version": "1.0.0",
-  "main": "servrt.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
